# dshin-cpp

./: CMakeLists.txt  README.md
matlab/: mexutil.h
scripts/: build.sh
src/: CMakeLists.txt  debug.h  main.cc  main.h
test/: CMakeLists.txt  test_template.cc
